[package]
name = "serduck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
anyhow = "1.0.48"
signal-hook = "0.3.10"
clap = "2.33.3"
protobuf = { version = "2", optional = true }

[build-dependencies]
protobuf-codegen-pure = {version = "2.25.2", optional = true}
protoc-rust = {version = "2.25.2", optional = true}

[features]
proto_debug = ["protobuf", "protobuf-codegen-pure", "protoc-rust"]

